src/app/modal/modal.component.css
.modal-canvas {
  position: fixed;
  z-index: 21;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  padding: 1rem;
  display: flex;
  justify-content: center;
  align-items: center;
}

.modal {
  max-height: 90vh;
  background-color: var(--bg-color);
  border: 1px solid var(--border-color);
  border-radius: var(--border-radius);
  padding: 1rem;
  position: relative;
  display: flex;
  box-shadow: 0 0 20px 5px rgba(0, 0, 0, 0.1);
}

.modal-content {
  overflow: auto;
  max-height: 100%;
  width: 100%;
  padding: 2px;
}

.modal-content > *:last-child {
  margin-bottom: 0;
}

.modal-control {
  position: absolute;
  top: 0;
  right: 0;
  opacity: .5;
  border-top-left-radius: 0;
  border-bottom-right-radius: 0;
}

.modal-control:hover {
  opacity: 1;
}

